// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenesesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Veiwing 
      <span>
        5
      </span>
       
      expenses
       totalling 
      <span>
        $10.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--create"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with one expnese 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Veiwing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.53
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--create"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
